# Agentic-Infrastructure

./: .coderabbit.yaml  .gitignore  Dockerfile  IDE_chat_history.md  Makefile  pyproject.toml  speckit.constitution
.github/: agent.md  copilot-instructions.md
.github/workflows/: ci.yml  main.yml
agentic/: __init__.py  engagement.py  notifier.py  skills.py  trend_fetcher.py  verification.py
skills/: README.md
skills/skill_fetch_trends/: README.md
skills/skill_generate_content/: README.md
skills/skill_publish_post/: README.md
specs/: agent_rules.md  architecture.md  autonomous_influencer_factory.md  frontend.md  functional.md  mcp_configuration.md  meta.md  openclaw_integration.md  technical.md
src/chimera/: __init__.py  cli.py
src/chimera/agents/: __init__.py  judge.py  planner.py
src/chimera/agents/workers/: __init__.py  content_worker.py  delivery_worker.py  economic_worker.py  trend_worker.py
src/chimera/core/: __init__.py  mcp.py  memory.py  security.py
src/chimera/core/security/: README.md
src/chimera/integrations/: __init__.py  coinbase.py  tiktok.py  youtube.py
tasks/: implementation_tasks.md
tests/: __init__.py  conftest.py  test_agents.py  test_data_schemas.py  test_engagement.py  test_skills_interface.py  test_trend_fetcher.py  test_verification.py
